# AED2.Scrabble

./: CMakeLists.txt  CMarmota.pro  Doxyfile  README.md  Scrabble.pro  Words.json  board.cpp  board.h  board.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
html/: ASync_8h_source.html  Btree_8h_source.html  Client_8cpp.html  Client_8cpp__incl.dot  Client_8cpp__incl.md5  Client_8h_source.html  Holder_8h_source.html  LastPlayList_8h_source.html  LastPlayNode_8h_source.html  LetterList_8h_source.html  LetterNode_8h_source.html  List_8h_source.html  Matrix_8h_source.html  Node_8h_source.html  WordList_8h_source.html  WordNode_8h_source.html  allocators_8h_source.html  annotated.html  biginteger_8h_source.html  board_8h_source.html  classASync-members.html  classASync.html  classAutoUTFInputStream-members.html  classAutoUTFInputStream.html  classAutoUTFOutputStream-members.html  classAutoUTFOutputStream.html  classBasicIStreamWrapper-members.html  classBasicIStreamWrapper.html  classBasicOStreamWrapper-members.html  classBasicOStreamWrapper.html  classBoard-members.html  classBoard.html  classBoard__coll__graph.dot  classBoard__coll__graph.md5  classBoard__inherit__graph.dot  classBoard__inherit__graph.md5  classBtree-members.html  classBtree.html  classBtree__coll__graph.dot  classBtree__coll__graph.md5  (+402 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_a.js  classes_b.js  classes_e.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
images/: logo.qrc
src/tec/: test.txt
src/tec/ac/cr/Scrabble/: main.cpp
src/tec/ac/cr/Scrabble/Logic/: ASync.cpp  ASync.h  Player.cpp  Player.h  json.hpp  main.cpp
src/tec/ac/cr/Scrabble/Logic/Data/: Holder.cpp  Holder.h  Phone.cpp  Phone.h
src/tec/ac/cr/Scrabble/Logic/Lists/: LetterList.cpp  LetterList.h  LetterNode.cpp  LetterNode.h  List.h  (+13 more)
src/tec/ac/cr/Scrabble/Server/: ASync.cpp  ASync.h  Client.cpp  Client.h  properties.text
src/tec/ac/cr/Scrabble/UI/: board.cpp  board.h  board.ui  connectwindow.cpp  connectwindow.h  connectwindow.ui  customrectitem.cpp  customrectitem.h  draggablerectitem.cpp  draggablerectitem.h  marmota.cpp  marmota.h  marmota.ui  menu.cpp  menu.h  menu.ui  scene.cpp  scene.h
src/tec/ac/cr/Scrabble/serializer/: Serializer.cpp  Serializer.h
(+20 files in other folders)
